--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 											<div class="col-md-4">
 												<div class="form-group">
 													<label for="lieu_depart">Votre lieu de départ:</label>
-													<input id="lieu_depart" type="text" name="lieu_depart" class="form-control" placeholder="Votre lieu de départ" autocomplete="off" required>
+													<input id="lieu_depart" type="text" name="lieu_depart" class="form-control" placeholder="Votre lieu de départ" autocomplete="off" readonly>
 												</div>
 											</div>
 											<div class="col-md-4">
@@ -425,19 +425,6 @@
 	
 	<!-- Cookie Banner -->
 	<script src="js/bootstrap-cookie-consent.js"></script>
-	<script type="text/javascript">
-															$(function () {
-																$('#date_depart').datetimepicker({
-																	locale: 'fr',
-																	format: 'DD/MM/YYYY'
-																});
-																$('#time_depart').datetimepicker({
-																	locale: 'fr',
-																	format: 'LT'
-																});
-																
-															});
-														</script>
 
 </body>
 
