--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 										<div class="row">
 											<div class="col-md-12">
 												<div class="form-group">
-													<textarea id="message" name="message" class="form-control" placeholder="Message *" rows="8" required></textarea>
+													<textarea id="message" name="message" class="form-control" placeholder="Message" rows="8"></textarea>
 												</div>
 											</div>
 											<div class="col-md-12">
