--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzCwAPB_CKjmqM49q5pkO9zui4dHMKLxs&amp;libraries=places&amp;callback=initAutocomplete" defer=""></script>										
 											<form id="book-form" action="">
 												<div class="form-group wow fadeInDown col-sm-4" data-wow-duration="500ms" data-wow-delay=".6s" style="visibility: visible; animation-duration: 500ms; animation-delay: 0.6s; animation-name: fadeInDown;">
-													<input id="autocomplete" placeholder="Votre lieu de départ" type="text" name="depart" class="form-control" autocomplete="off" >
+													<input id="autocomplete" placeholder="Votre lieu de départ" type="text" name="depart" class="form-control" autocomplete="off" autofocus >
 												</div>
 												<div class="form-group wow fadeInDown col-sm-4" data-wow-duration="500ms" data-wow-delay=".6s" style="visibility: visible; animation-duration: 500ms; animation-delay: 0.6s; animation-name: fadeInDown;">
 													<input id="autocomplete_2" placeholder="Votre lieu d&#39;arrivee" type="text" name="arrivee" class="form-control" autocomplete="off" >
