--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="form-group">
-													<input id="tel" type="text" name="tel" class="form-control" placeholder="Votre téléphone *">
+													<input id="tel" type="text" name="tel" class="form-control" placeholder="Votre téléphone *" required>
 												</div>
 											</div>
 											<div class="col-md-6">
