--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <section class="section-header">
                                 <h1 class="wow fadeInUp  cd-headline slide" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                                 
-                                <span class="norm">Nous proposons votre transfert de luxe</span><br>
+                                <span class="norm hidden-sm hidden-xs">Nous proposons votre transfert de luxe</span><br>
                                 <span class="text_anim hidden-sm hidden-xs">										
 								   <b class="fadeInDown" style="display: block;">Transferts toutes distances 24h/24</b>
 								   <b class="" style="display: none;">Mercedes classe E ou Porsche Panamera</b></span>
