--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé">
-    <meta name="author" content="">
+    <meta name="author" content="Civitas Express">
 
     <title>Civitas Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
-	
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -52,13 +53,16 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Private Express - 07.89.41.65.48</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt="Civitas Express" class="img-responsive" id="logo1"/><img src="img/logo3.png" style="display:none;" alt="Civitas Express" id="logo2" class="img-responsive"/></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <li >
+                        <a class="page-scroll" href="tel:0789416548"><span style="font-size: 20px;font-weight: 700;">Tel: 07.89.41.65.48</span></a>
+                    </li>
+					<li>
                         <a class="page-scroll" href="#about">En pratique</a>
                     </li>
                     <li>
