--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										</h2>
 									</div>
 									<div class="row contact-form">
-										<script src="https://maps.googleapis.com/maps/api/js?key= AIzaSyBwU-L_HNyAI-AtDrN6JMoTE1f-W-1NhC4&amp;libraries=places&amp;callback=initAutocomplete" defer=""></script>										
+										<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwU-L_HNyAI-AtDrN6JMoTE1f-W-1NhC4&amp;libraries=places&amp;callback=initAutocomplete" defer=""></script>										
 											<form id="book-form" action="">
 												<div class="form-group wow fadeInDown col-sm-4" data-wow-duration="500ms" data-wow-delay=".6s" style="visibility: visible; animation-duration: 500ms; animation-delay: 0.6s; animation-name: fadeInDown;">
 													<input id="autocomplete" placeholder="Votre lieu de départ" type="text" name="depart" class="form-control" autocomplete="off" autofocus >
