--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé">
+    <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi">
     <meta name="author" content="Civitas Express">
 
-    <title>Civitas Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
+    <title>Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap Core CSS -->
@@ -53,7 +53,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt="Civitas Express" class="img-responsive" id="logo1"/><img src="img/logo3.png" style="display:none;" alt="Civitas Express" id="logo2" class="img-responsive"/></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo2.png" alt="Private Express" class="img-responsive" id="logo1"/><img src="img/logo4.png" style="display:none;" alt="Private Express" id="logo2" class="img-responsive"/></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -298,12 +298,12 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto: urban.xpress44@gmail.com">urban.xpress44@gmail.com</a></p>
+                    <p><a href="mailto: private.express44@gmail.com">private.express44@gmail.com</a></p>
                 </div>
 				<div class="col-lg-4 text-center">
                     <i class="fa fa-facebook-official fa-3x sr-contact"></i>
 					<a href=https://facebook.com">						
-						<p>/urban-express</p>
+						<p>/private.express44</p>
 					</a>
                 </div>
             </div>
@@ -480,12 +480,12 @@
 										<li>Adresse (INSEE) : 3 Allée Alain Gerbault 44200 Nantes</li>
 										<li>SIRET : 532460698 RCS Nantes , APE 4932Z</li>
 										<li>Tel : 07 89 41 65 48</li>
-										<li>Email: urban.xpress44@gmail.com</li>
+										<li>Email: private.express44@gmail.com</li>
 									</ul>
 									<p><strong>Données personnelles :</strong></p>
 									<p>Conformément à la loi Informatique et Libertés du 6 janvier 1978  modifiée par la loi du 6 août 2004 relative à la protection des personnes  physiques à l'égard des traitements des données à caractère personnel, tout  utilisateur du site dispose, à tout moment, d'un droit d'accès, de  modification, de rectification ou de suppression des données qui le concernent.</p>
 									   <p>Pour cela, l’utilisateur pourra consulter et modifier ces données via le site www.private-express.fr directement ou devra faire sa demande soit par voie  électronique à l'adresse suivante :
-										urban.xpress44@gmail.com ou par voie  postale à l'adresse suivante 3 Allée Alain Gerbault 44200 Nantes - France.
+										private.express44@gmail.com ou par voie  postale à l'adresse suivante 3 Allée Alain Gerbault 44200 Nantes - France.
 									</p>
 									<p class="">&nbsp;</p>
 									<p class=""><strong>Cookies :</strong></p>
