--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi">
+    <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi, Navette aeroport, Gare SNCF">
     <meta name="author" content="Civitas Express">
 
     <title>Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
@@ -94,7 +94,7 @@
                             <section class="section-header">
                                 <h1 class="wow fadeInUp  cd-headline slide" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                                 
-                                <span class="norm hidden-sm hidden-xs">Nous proposons votre transfert de luxe</span><br>
+                                <span class="norm hidden-sm hidden-xs">Nous proposons votre transfert</span><br>
                                 <span class="text_anim hidden-sm hidden-xs">										
 								   <b class="fadeInDown" style="display: block;">Transferts toutes distances 24h/24</b>
 								   <b class="" style="display: none;">Mercedes classe E ou Porsche Panamera</b></span>
@@ -122,9 +122,8 @@
 												<div class="form-group wow fadeInDown col-sm-4" data-wow-duration="500ms" data-wow-delay=".6s" style="visibility: visible; animation-duration: 500ms; animation-delay: 0.6s; animation-name: fadeInDown;">
 													<select name="select-vehicule" class="form-control" id="select-vehicule">
 														<option value="" selected="" disabled="">Choisissez le service</option>
-														<option value="chaufeur">Mise à disposition avec chauffeur</option>
-														<option value="mariage">Service pour les mariages</option>
-														<option value="Longue distance">Les courses longues distances</option>
+														<option value="berline_4">Berline jusqu'à 4 personnes</option>
+														<option value="van_8">Van jusqu'à 8 personnes</option>
 													</select>
 												</div>
 												<div id="submit" class="col-sm-12" >
@@ -202,8 +201,8 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>RAPIDITE ET SECURISE</h3>
-                        <p class="text-muted">Une service super rapidité et sécurisé!</p>
+                        <h3>RAPIDE ET SECURISE</h3>
+                        <p class="text-muted">Une service super rapide et sécurisé!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -348,9 +347,8 @@
 													<label for="vehicule">Votre service:</label>
 													<select id="vehicule" name="vehicule" class="form-control" required>
 														<option value="" selected="" disabled="">Choisissez le service</option>
-														<option value="chaufeur">Mise à disposition avec chauffeur</option>
-														<option value="mariage">Service pour les mariages</option>
-														<option value="Longue distance">Les courses longues distances</option>
+														<option value="berline_4">Berline jusqu'à 4 personnes</option>
+														<option value="van_8">Van jusqu'à 8 personnes</option>
 													</select>
 												</div>
 											</div>
