--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi, Navette aeroport, Gare SNCF">
     <meta name="author" content="Civitas Express">
+	<meta name="keywords" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi, Navette aeroport, Gare SNCF" />
 
     <title>Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -41,6 +42,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<link rel="canonical" href="http://www.private-express.fr/">
 
 </head>
 
