--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" itemscope itemtype="http://schema.org/Article">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi, Navette aeroport, Gare SNCF">
+    <meta name="description" content="Réservez en ligne un Chauffeur Privé VTC à Nantes Prix Fixe pour mise à disposition avec chauffeur et pour les mariages">
     <meta name="author" content="Civitas Express">
 	<meta name="keywords" content="Private Express, Chauffeur privé, VTC privé, Nantes, La Loire Atlantique, Taxi Privé, Taxi, Navette aeroport, Gare SNCF" />
 
     <title>Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	
+	<!-- Schema.org markup for Google+ -->
+	<meta itemprop="name" content="Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe">
+	<meta itemprop="description" content="Réservez en ligne un Chauffeur Privé VTC à Nantes Prix Fixe">
+	<meta itemprop="image" content="http://www.private-express.fr/img/header.jpg">
+
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@private-express">
+	<meta name="twitter:title" content="Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe">
+	<meta name="twitter:description" content="Réservez en ligne un Chauffeur Privé VTC à Nantes Prix Fixe pour mise à disposition avec chauffeur et pour les mariages">
+	<meta name="twitter:creator" content="@Civitas_Express">
+	<!-- Twitter summary card with large image must be at least 280x150px -->
+	<meta name="twitter:image:src" content="http://www.private-express.fr/img/header.jpg">
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Private Express - VTC : Réservez un Chauffeur Privé VTC à Nantes Prix Fixe" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="http://www.private-express.fr" />
+	<meta property="og:image" content="http://www.private-express.fr/img/header.jpg" />
+	<meta property="og:description" content="Réservez en ligne un Chauffeur Privé VTC à Nantes Prix Fixe pour mise à disposition avec chauffeur et pour les mariages" />
+	<meta property="og:site_name" content="private-express" />
+	
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -145,18 +168,18 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2 class="section-heading">Qui sommes nous?</h2>
                     <hr class="light">
-                    <p class="text-faded">CIVITAS EXPRESS est une société de transport de personnes VTC (Voiture de Transport avec Chauffeur), basée à Nantes située dans La Loire Atlantique - Département 44, nous travaillons uniquement sur réservation.!</p>
+                    <p class="text-faded">CIVITAS EXPRESS est une société de transport de personnes VTC (Voiture de Transport avec Chauffeur), basée à Nantes située dans La Loire Atlantique - Département 44, nous travaillons uniquement sur réservation.</p>
                     <h2 class="section-heading">Nous proposons:</h2>
 					<hr class="light">
 					<ul class="text-faded text-left">
 						<li>
-							Service et mise à disposition avec chauffeur ( mercedes classe E ou porsche panamera)
+							Service et mise à disposition avec chauffeur
 						</li>
 						<li>
 							Service pour les mariages ( mercedes classe E ou porsche panamera)
 						</li>
 						<li>
-							Pour les courses longues distances, merci de nous contacter directement par mail ou téléphone.
+							Pour les courses longues distances, merci de nous contacter directement par mail ou téléphone
 						</li>
 					</ul>
 					<h2 class="section-heading">Un Tarif Fixe sans Surprise</h2>
@@ -164,18 +187,19 @@
 					<p class="text-faded">Vous pouvez trouver quelques exemple de tariff pour des villes de la région:</p>
 					<ul class="text-faded text-left">
 						<li>
-							Nantes - Cholet : 95 euros le jour et 125 la nuit
+							Nantes - Cholet : 95 euros le jour et 125 euros la nuit
 						</li>
 						<li>
-							Nantes - la roche sur yon : 100 euros le jour et 130 la nuit
+							Nantes - la roche sur yon : 100 euros le jour et 130 euros la nuit
 						</li>
 						<li>
-							Nantes- Angers : 140 le jour et 170 la nuit
+							Nantes- Angers : 140 euros le jour et 170 euros la nuit
 						</li>
 						<li>
-							Nantes la Baule : 120 euros le jour et 150 la nuit
+							Nantes la Baule : 120 euros le jour et 150 euros la nuit
 						</li>
 					</ul>
+					<p class="text-faded">Nous acceptons les paiements par carte bancaires.</p>
 					<a href="#modalContact" class="btn btn-default btn-xl sr-button" data-toggle="modal" onclick=" setDataBeforeContact();">Commander!</a>
                 </div>
             </div>
